crates/ir/tests/snapshots/lower_test__hkt_qualifier_generic_lambda.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module hkt_qualifier_generic_lambda

type Result[e, f] = Ok#0(b) | Err#1(a)
type Ordering = LT#0 | EQ#1 | GT#2
type List[g] = Cons#0(c, List[c]) | Nil#1
type Option[h] = Some#0(d) | None#1

fn f0 apply_fn(v0: r7[s7], v1: (r7[s7]) -> r7[s7]) -> r7[s7] =
  let v2: r7[s7] = call_closure v1(v0)
  v2
