crates/ir/tests/snapshots/lower_test__hkt_qualifier_lambda_own_param.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module hkt_qualifier_lambda_own_param

fn consume_once(v0: r7[~s7], v1: (r7[~s7]) -> r7[~s7]) -> r7[~s7] =
  let v2: r7[~s7] = call_closure v1(v0)
  v2
