crates/ir/tests/snapshots/lower_test__hkt_qualifier_shared_to_requ.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module hkt_qualifier_shared_to_requ

fn dup(v0: r7) -> (r7, r7) =
  let v1: (r7, r7) = tuple(v0, v0)
  v1

fn test_shared(v2: u7[v7]) -> (u7[v7], u7[v7]) =
  let v3: (u7[v7], u7[v7]) = call dup(v2)
  v3
