crates/ir/tests/snapshots/lower_test__identity.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module identity

fn identity(v0: r7) -> r7 =
  v0
