crates/ir/tests/snapshots/lower_test__impl_vec_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module impl_vec_trait

type List[e] = Cons#0(a, List[a]) | Nil#1
type Ordering = LT#0 | EQ#1 | GT#2
type Option[f] = Some#0(b) | None#1
type Result[g, h] = Ok#0(d) | Err#1(c)
