crates/ir/tests/snapshots/lower_test__import_aliases.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module import_aliases

; extern magnitude
; extern println

fn keep(v0: Option[Int]) -> Int =
  0

fn main() -> Unit =
  let v1: Int = call magnitude(0)
  let v2: ~Option[Int] = construct Option::None#1()
  let v3: Int = call keep(v2)
  let v4: Int = add_int(v1, v3)
  let v5: Unit = call println(v4)
  v5
