crates/ir/tests/snapshots/lower_test__intrinsic_conversions.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module intrinsic_conversions

type Result[e, f] = Ok#0(b) | Err#1(a)
type Option[g] = Some#0(c) | None#1
type Ordering = LT#0 | EQ#1 | GT#2
type List[h] = Cons#0(d, List[d]) | Nil#1

fn f0 main() -> Unit =
  let v0: Float = call f2(1)
  let v1: Int = call f3(v0)
  let v2: String = call f4(v1)
  let v3: String = call f5(v2, "ab")
  let v4: Int = call f6(v3)
  let v5: Unit = call f1(v4)
  v5
